--- a/gb/19/7/1/n11356759.md
+++ b/gb/19/7/1/n11356759.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uemdlg368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>澳洲最低工资标准居于世界之首</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年07月01日讯】（大纪元记者伊琏<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%9C%80%E4%BD%8E%E5%B7%A5%E8%B5%84.md#1">最低工资</a>已在世界排名最高。公平工作委员会（FWC）上个月做出的<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E4%B8%8A%E8%B0%83.md#1">上调</a>最低工资3%的决定，自7月1日起生效，澳洲的最低<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%97%B6%E8%96%AA.md#1">时薪</a>已<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E4%B8%8A%E8%B0%83.md#1">上调</a>至19.49元。</p>
+<p>【大纪元2019年07月01日讯】（大纪元记者伊琏<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9C%80%E4%BD%8E%E5%B7%A5%E8%B5%84.md#1">最低工资</a>已在世界排名最高。公平工作委员会（FWC）上个月做出的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%8A%E8%B0%83.md#1">上调</a>最低工资3%的决定，自7月1日起生效，澳洲的最低<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%97%B6%E8%96%AA.md#1">时薪</a>已<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%8A%E8%B0%83.md#1">上调</a>至19.49元。</p>
 <p>但与此同时，周末加班补贴则大幅减少。同期实施的系列新规将涉及小企业贷款与投诉、退休金、电力消费等多项改革。</p>
-<p>最新的<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%9C%80%E4%BD%8E%E5%B7%A5%E8%B5%84.md#1">最低工资</a>标准将为220万最低工资从业人员每周带来21.60元的额外收入。但这一工资调整幅度仍然低于上一个财年度的3.5%。不过，此举却不妨让<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>的最低工资标准居于世界之首。</p>
+<p>最新的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9C%80%E4%BD%8E%E5%B7%A5%E8%B5%84.md#1">最低工资</a>标准将为220万最低工资从业人员每周带来21.60元的额外收入。但这一工资调整幅度仍然低于上一个财年度的3.5%。不过，此举却不妨让<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>的最低工资标准居于世界之首。</p>
 <p>与上调最低工资同期实施的还有下调周日加班费率，其降幅为10%-15%。下调加班费所涵盖的行业包括零售、餐饮、酒店和药店等，预计约有70万从业人员会受到影响。</p>
 <p>据澳新社消息，新财年上调薪酬的除了拿最低工资的雇员外，政治家与公务员也在加薪行列，其加薪幅度为2%。</p>
 <p>涨薪后，全澳最高收入的政府官员、总理与内阁部次长帕金森（Martin Parkinson）的收入将超过91.4万元。预计总理莫里森将在现有工资53.846万元的基础上再涨薪1万余元。</p>
@@ -23,48 +23,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/12/11/n10903112.md#1">澳税局外包合同公司有避税破产“黑历史”</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/1/23/n10995594.md#1">克扣雇员工资 墨市华人雇主被罚款逾30万</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/1/30/n11012017.md#1">时薪仅7元 南澳一印度员工被克扣达9万</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/3/13/n11109600.md#1">低薪进富人区 工党提高最低工资政策引质疑</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/3/14/n11111894.md#1">澳餐饮业吁冻结工资 雇主警告加薪将致失业</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/3/14/n11112210.md#1">工党如获胜 澳法定最低工资或跃居全球最高</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/3/26/n11140534.md#1">澳洲联邦工党拟修法引入“生活工资”</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/4/26/n11214694.md#1">克扣员工工资25万元遭起诉 飞行中心否认</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/5/3/n11230931.md#1">智库：雇主强制性退休金供款增至12%</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/5/30/n11289091.md#1">7月1日起澳最低工资上调至每小时19.49元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/11/n10903112.md#1">澳税局外包合同公司有避税破产“黑历史”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/23/n10995594.md#1">克扣雇员工资 墨市华人雇主被罚款逾30万</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/30/n11012017.md#1">时薪仅7元 南澳一印度员工被克扣达9万</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/3/13/n11109600.md#1">低薪进富人区 工党提高最低工资政策引质疑</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/3/14/n11111894.md#1">澳餐饮业吁冻结工资 雇主警告加薪将致失业</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/3/14/n11112210.md#1">工党如获胜 澳法定最低工资或跃居全球最高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/3/26/n11140534.md#1">澳洲联邦工党拟修法引入“生活工资”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/4/26/n11214694.md#1">克扣员工工资25万元遭起诉 飞行中心否认</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/5/3/n11230931.md#1">智库：雇主强制性退休金供款增至12%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/5/30/n11289091.md#1">7月1日起澳最低工资上调至每小时19.49元</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010920.md#1" target="_blank">共产暴政录：“六四屠城”的几个问题</a></li><li><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/26/n10811962.md#1" target="_blank">他曾接近失明 一位程序员绝处逢生后的告白</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10712571.md#1" target="_blank">林辉：中共地雷战幕后清华师生的惨死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581299.md#1" target="_blank">绝路逢生  台湾女子找到心灵的蓝天</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/25/n12429391.md#1">奥妙莫名中秋节神迹  搭起仙凡之桥</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12458017.md#1">【严真点评】:“十月惊奇”首发两重磅消息</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12456305.md#1">【拍案惊奇】川普说出院是奇迹 习要当太上皇续权？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/6/n12456300.md#1">【西岸观察】川普为何不怕中共病毒？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451696.md#1">中秋节已过 没卖掉的月饼去哪了</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12443120.md#1">在Costco购买这八种食品 最合适一家人吃</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/3/n12451102.md#1">【新闻看点】川普试用新疗法 习要动王岐山？</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12452582.md#1">李荣浩纠正谢霆锋一叫法 杨丞琳打趣回应</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12450929.md#1">《艾蜜莉在巴黎》影评：莉莉柯林斯大放异彩 将好故事发扬光大</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12452790.md#1">刘德华黄历生日 捧大盆红鸡蛋庆祝</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12455857.md#1">范冰冰确定复出 好莱坞新片《355》海报曝光</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451602.md#1">无人机拍到惊人照片：心形鲑鱼群包围鲨鱼</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451754.md#1">中共官媒谎称：台士兵一半不识字 开战就投降</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/9/30/n12443080.md#1">【直播】乳房有硬块是癌症？名医教你抗乳癌</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/whhoub340/djy/blob/master/gb/20/10/4/n12451880.md#1">从意大利到英国 10岁男童走2800公里去看奶奶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972610.md#1">6万武汉人封城前外逃 路线与欧美疫情吻合？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11974512.md#1">【新闻看点】习将出席G20峰会 国际问责不断</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972094.md#1">捂不住了 大陆金融系统至少千人染中共病毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972775.md#1">你中奖了吗？109年1-2月统一发票兑奖资讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11971575.md#1">宣传新片时自称亚裔 刘亦菲遭大陆网民骂翻</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/23/n11967623.md#1">晒合照悼念刘真 翁虹：遗憾无法实现舞林之约</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11969439.md#1">中国古代的“飞天”舞蹈家</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/1/n11356759.htm">澳洲最低工资标准居于世界之首</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/1/n11356759.htm">澳洲最低工资标准居于世界之首</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uemdlg368/djy/blob/master/gb/19/7/1/n11356759.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/7/1/n11356759.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
